adjust to 7.16 reality